force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Incident_Txn_History__c/BMCServiceDesk__SLA_Milestone_Incident_Txn_History__c.object-meta.xml
<CustomObject>
    <description>Stores the incident milestones that are achieved or canceled for a service transaction.</description>
    <label>SLA Milestone Incident History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Milestone Incident History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>