force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Incident_Txn_History__c/fields/BMCServiceDesk__Action_Performed__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Action_Performed__c</fullName>
    <description>Action Performed by the milestone transaction.
Example: Sent Email notification to: TO / CC values
&lt;Actual Email&gt;</description>
    <label>Action Performed</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>