force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Incident_Txn_History__c/fields/BMCServiceDesk__FKIncident__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKIncident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
    <relationshipName>SLA_Milestone_Incident_Transact_History</relationshipName>
    <type>Lookup</type>
</CustomField>