force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Incident_Txn_History__c/fields/BMCServiceDesk__FKIncident_Service_Target__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKIncident_Service_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident Service Target</label>
    <referenceTo>BMCServiceDesk__Incident_Service_Target__c</referenceTo>
    <relationshipName>SLA_Milestone_Incident_Transact_History</relationshipName>
    <type>Lookup</type>
</CustomField>