force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Incident_Txn_History__c/fields/BMCServiceDesk__SLA_Milestone_Value__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SLA_Milestone_Value__c</fullName>
    <description>SLA Milestone Value</description>
    <label>SLA Milestone Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>