force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Incident_Txn_History__c/fields/BMCServiceDesk__Status__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Status__c</fullName>
    <description>SLA Milestone transaction status. Whether successfully executed - &quot;PASS&quot; or exception occured &quot;FAIL&quot;.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>