force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Incident_Txn_History__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>BMCServiceDesk__Action_Performed__c</columns>
    <columns>BMCServiceDesk__Error__c</columns>
    <columns>BMCServiceDesk__FKIncident__c</columns>
    <columns>BMCServiceDesk__FKIncident_Service_Target__c</columns>
    <columns>BMCServiceDesk__SLA_Milestone_Condition__c</columns>
    <columns>BMCServiceDesk__SLA_Milestone_Value__c</columns>
    <columns>BMCServiceDesk__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>